--- a/frontend/src/pages/Oficial/style.css
+++ b/frontend/src/pages/Oficial/style.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
-#menu_button{
-    display: none;
-}
-
+/* .header_button{
+    margin-bottom: 0;
+} */
 body {
     background-color: #ffffff;
 }
@@ -12,6 +11,7 @@ body {
     height: 550px;
     padding: 45px 0 0 37px;
     overflow:hidden;
+    margin-top: -15px;
 }
 
 .h1_titulo{
@@ -33,11 +33,10 @@ body {
     line-height: 19px;
     color: #483972;
 } 
-#teste_topo{
-    margin-left: 5%;
-}
-.button{
+
+.button1{
     background: #483972;
+    color: #fff;
     border-radius: 8px;
     width: 200px;
     height: auto;
@@ -46,9 +45,13 @@ body {
     left: 50%;
     transform: translate(-50%,-50%);
     margin-top: 50px;
-    color: #fff;
+     
+    /* display: flex;
+    align-items: center;
+    justify-content: center;  */
+    
 }
-.button:hover{
+.button1:hover{
     background-color: #7B61FF;
     color: #fff;
 }
@@ -67,18 +70,12 @@ body {
     margin-left: 50%;
     transform: translate(-50%,-50%); 
 }
-
-#p_subtitulo{
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #483972;
-} 
-
-.texto_imagem{
-    width: auto;
+#MedidaPNaoRolarPLado{
+    padding: 0 0 0 0;
+    margin: 0 0 0 0;
+}
+.p_texto_imagem{
+    width: 100%;
     height: 79px;
     font-family: Roboto;
     font-style: normal;
@@ -88,21 +85,26 @@ body {
     color: #483972;
     /* text-align: left;  */
     /* padding: 0 0 0 34px; */
-    margin: 0 0 0 25px;
+    margin-left: 15%;
+}
+#img_nosso_objetivo{
+    width: 100%;
+    height: 90px;
+    margin-top: 10%;
+    display: block;
+    margin-left: auto; 
+    margin-right: auto; 
 }
 
-#img_nosso_objetivo{
-    width: 172.04px;
-    height: 115px;
-    /* display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15%; */
-}
 #espacamento_h2{
-    margin-top: 81px;
+    margin-top: 87px;
 }
-.centralizarTexto{
+
+.MedidaPNaoRolar{
+    margin: 0 10px 0 10px;
+}
+
+.p_centralizarTexto{
     width: 220px;
     text-align: center;
     display: block;
@@ -129,12 +131,6 @@ body {
     color: #fff;
 }
 
-.grid_home{
-    margin: 0 10px 0 10px;
-    
-}
-
-
 #MedidaParaNaoRolarAPagina{
     margin: 0 8px;
 } 
@@ -147,98 +143,49 @@ body {
     margin-top: 30px;
     width: 42px;
     height: 42px;
-    position: relative;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 
 .p_card{
-    /* width: 98px;
-    height: 67px; */
-
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 14px;
     text-align: center;
-    color: #000000;
-    margin: 0 0 0 0;
+    color: #483972;
+    width: auto;
+    height: 67px;
+}
+.fundo_card{
+    margin-bottom: 50px;
 }
 
-
 @media (min-width: 540px){
-    #menu_button{
-        display: none;
-    }
     #button_precipal{
         display: none;
     }
     #fundo_inicio{
         background-image: url("../../assets/Fundo_grade.png");
         width: 100%;
-        height: 550px;
+        height: 500px;
         padding: 45px 0 0 37px;
         align-items: center;
     }
-    /* .h1_titulo{
-        width: 100%;
-        height: auto;
-        top: 1350px; 
-        font-size: 28px;
-        line-height: 32px;
-        margin-top: 10%;
-        margin-left: 10%;
-    } */
-    /* .p_home{
-        font-size: 19px;
-        line-height: 21px;
-        margin-top: 10%;
-        margin-left: 10%;
-    } */
-    /* .button{
-        margin-top: 25%;
-    }
-    .centralizarTexto{
-        width: auto;
+
+    .h1_titulo{
+        font-size: ;
     }
 
-    .img_card{
-        width: 40%;
-        height: auto;
-        margin-top: 20%;
-    }
-    .texto_imagem{
-        width: auto;
-        height: 15%;
-        font-size: 16px;
-        line-height: 20px;
-        padding: 0 25% 0 20%;
-    } */
-    /* #img_nosso_objetivo{
-        width: 90%;
-        height: 15%;
-        margin-top: 5%;
-    }     */
-    /* .fundo_card{
-        padding: 6% 5% 15% 5%;
-        box-shadow: 1px 1px 1px #DCDCDC;
-        background-color: #FAFAFA;
-    } 
-    .p_res_920{
-        font-size: 20px;
-        line-height: 28px;
-        width:80%;
-        height: auto;
-    } */
+
 
 }
 
 @media (min-width: 721px){
-    #menu_button{
-        display: none;
-    }
+
     #button_precipal{
         display: none;
     }
@@ -268,11 +215,7 @@ body {
 
 
 }
-@media (min-width: 992px){
-    #menu_button{
-        display: block;
-    }
-    
+@media (min-width: 992px){    
     #fundo_inicio{
         background-image: url("../../assets/Fundo_grade.png");
         width: 100%;
@@ -296,7 +239,7 @@ body {
         margin-top: 48px;
     } */
 
-    .button{
+    /* .button{
         display: none;
     }
     #button_precipal{
@@ -329,15 +272,8 @@ body {
         height: 240px;
     }
 
-    .p_res_920{
-        font-size: 30px;
-        line-height: 36px;
-        width:100%;
-        height: auto;
-    }
-
-
-    /*p{
+*/
+    /*p{ 
 
     }
     .texto_imagem{
@@ -359,11 +295,8 @@ body {
 
 }
 
-@media (min-width: 1150px) {
-    #menu_button{
-        display: block;
-    }
-    
+/* @media (min-width: 1150px) {
+
     .fundo_card{
         position: relative;
         right: 50%;
@@ -381,4 +314,4 @@ body {
         
     }     
 
-}
+} */
