--- a/frontend/src/pages/Oficial/style.css
+++ b/frontend/src/pages/Oficial/style.css
@@ -245,27 +245,91 @@ body {
         font-size: 19px;
         line-height: 22px;
     }
-    .p_home_AC721{
-        left: 18%;
-    }
-
-
     .button1{
         top: 45%;
         left: 24%;       
     }
-
-
+    .img_card{
+        width: 60%;
+        height: auto;
+    }
+    .p_card{
+        width: auto;
+        height: auto;
+        font-size: 17px;
+        line-height: 18px;
+    }
 }
 @media (min-width: 992px){    
     #fundo_inicio{
         background-image: url("../../assets/Fundo_grade.png");
         width: 100%;
-        height: 550px;
-        padding: 45px 0 0 37px;
+        height: 600px;
+        padding: 45px 0 0 166px;
+    }
+    .h1_titulo{
+        font-size: 45px;
+        line-height: 53px;
+        width: 100%;
+        margin-bottom: 60px;
+        margin-top: 90px;
+    }
+    .p_home{
+        font-size: 22px;
+        line-height: 24px;
+    }
+    #p_home_largura{
+        width: 480px;
+        height: 190px;
+        
+    }
+    .button1{
+        top: 450px;
+        left: 265px;       
+    }
+    .h2_home{
+        font-size: 40px;
+        line-height: 44px;
+    }
+    .p_texto_imagem{
+        font-size: 22px;
+        line-height: 24px;
+        width: 472px;
+        height: 256px;
+        margin-top: 50px;
+        padding-right: 20px;
+    }
+    /* .p_centralizarTexto{
+        width: 527px;
+        height: 116px;
+    } */
+
+    .fundo_card{
+        padding: 1% 1% 1% 1%;
+        box-shadow: 1px 1px 1px #DCDCDC;
+        background-color: #FAFAFA;
     }
 
-    .h1_titulo{
+    .img_card{
+        width: 185px;
+        height: 185px;
+    }
+    .p_card{
+        width: auto;
+        height: auto;
+        font-size: 13px;
+        line-height: 15px;
+    }
+
+
+
+
+
+
+
+
+
+    /* .h1_titulo{
         width: 100%;
         height: auto;
         font-size: 48px;
@@ -273,7 +337,7 @@ body {
         top: 0; 
         margin-top: 2%;
         margin-left: 10%;
-    }
+    } */
     /* .p_home{
         font-size: 24px;
         line-height: 28px;
